Modify: qrcode image file attach

--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -26,7 +26,7 @@
       <p style="font-size:1.4rem; font-weight:500">{{ data['reservationTicketCount'] }}명</p>
     </div>
   </div>
-  <img src="{{ data['qrcode'] }}" style="height:11rem; padding:2rem; borderLeft:3px dashed #ffffff">
+  <img src="cid:qrcode" style="height:11rem; padding:2rem; borderLeft:3px dashed #ffffff">
 </li>
 </body>
 </html>
